syntax = "proto3";

option csharp_namespace = "BalanceMicroservice";


service BalanceServiceProto {
	rpc GetBalance(GetBalanceRequest) returns (BalanceResponse);
	rpc AddBalance(ChangeBalanceRequest) returns (BalanceResponse);
	rpc ReduseBalance(ChangeBalanceRequest) returns (BalanceResponse);
}


message GetBalanceRequest {
	string id = 1;
}

message ChangeBalanceRequest {
	string id = 1;
	int32 value = 2;
}

message BalanceResponse {
	int32 balance_active = 1;
	int32 balance_frozen = 2;
	bool error = 3;
	string error_message = 4;
}