syntax = "proto3";

option csharp_namespace = "Balances";

package balance;

service Balance {
  rpc GetBalance (EmptyRequest) returns (BalanceData);
  rpc AddBalance (ValueRequest) returns (BalanceData);
  rpc ReduceBalance (ValueRequest) returns (BalanceData);
}
message EmptyRequest{

}
message BalanceData {
  double  balance = 1;
  double frozen_balance = 2;
  enum Status {
    NONE = 0;
    SUCCESS = 1;
    FAILED = 2;
  }
  Status status = 3;
}
message ValueRequest{
    double value = 1;
}